class-yaml/quotas-policy/ip-quota-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-res.quota-deployment
  labels:
    app: ip-deployment
spec:
  replicas: 4 
  selector:
    matchLabels:
      app: ip-app
  template:
    metadata:
      labels:
        app: ip-app
    spec:
      containers:
      - name: ipapp
        image: rajath177/ip-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.5"
            memory: "100Mi"
          limits:
            cpu: "0.8"
            memory: "600Mi"
