class-yaml/quotas-policy/deny-all-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:  
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
