class-yaml/quotas-policy/ip-policy-app.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ip-app-allow
spec:  
  podSelector:
    matchLabels: 
      app: ip-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podselector:
        matchLabels:
          app: db-app
    ports:
    - port: 80
      protocol: TCP
